<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.app.android.sketchproject.UI.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4"
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6"
        android:weightSum="10">

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@mipmap/edittext"
            android:gravity="center"
            android:hint="@string/id_hint"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@mipmap/edittext"
            android:gravity="center"
            android:hint="@string/pw_hint"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/loginCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@id/edit2"
                android:layout_below="@id/edit2"
                android:layout_weight="1"
                android:text="@string/auto_login"
                android:textColor="@color/colorTitle" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/edit2"
                android:layout_alignRight="@+id/edit2"
                android:layout_below="@+id/edit2"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/findid"
                android:textColor="@color/colorTitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@mipmap/btn"
                android:gravity="center"
                android:text="@string/login"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/signup"
                android:gravity="center"
                android:onClick="onButtonClicked"
                android:text="회원가입"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
            android:id="@+id/buttonOAuthLoginImg"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/btnlogout"
            android:text="연동해제"
            android:layout_margin="5dp"
            android:textSize="8sp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
